--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+streamlit
 pysqlite3-binary
 langchain
 chromadb
@@ -13,3 +14,8 @@ langchain-community
 SpeechRecognition
 langchain_huggingface
 google-cloud-speech
+transformers
+torch
+Pillow
+PyMuPDF
+pytesseract
